# python-cribbage

./: README.md  pyproject.toml
.github/: python-package.yaml
.github/workflows/: python-package.yaml
python_cribbage/: card.py  card_set.py  game.py  game_hand.py  hand.py  hand_scoring.py
tests/: test_card.py  test_card_set.py  test_game_hand.py  test_hand.py  test_hand_scoring.py  test_python_cribbage.py
