[tool.poetry]
name = "python-cribbage"
version = "0.1.0"
description = ""
authors = ["Dennis Harrop <dennisjohnharrop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
